# mlops2025_Lynn_Hadi

./: .gitignore  .sagemakerignore  Makefile  README.md  mlflow.db  pyproject.toml  run_training_pipeline.py
models/: trained_model.dv.pkl
notebooks/: 1.1-TaxiTrips-Tracking.ipynb
scripts/: batch_inference.py  feature_engineering.py  preprocess.py  train.py
src/mlproject/: __init__.py
src/mlproject.egg-info/: PKG-INFO  SOURCES.txt
src/mlproject/features/: TransformersManager.py  __init__.py  base_featurise.py  featurizer.py  schema.py  split.py
src/mlproject/inference/: __init__.py  base_inference.py  inference.py
src/mlproject/pipelines/: __init__.py  inference_pipeline.py  training_pipeline.py
src/mlproject/preprocess/: __init__.py  base_preprocessor.py  preprocessor.py
src/mlproject/train/: __init__.py  base_train.py  trainer.py
src/mlproject/utils/: __init__.py  dataloader.py  datasaver.py
